Fixed header spacing - Issue 95
Bootstrap 3.0 CSS is picked up, so when you hover the options (Settings,
<Username>, etc.), things are not as they were before.  No break in
functionality.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,8 @@
+/* Make nav bar horizontal */
+.navbar .nav > li {
+    display:inline-block;
+}
+
 .header {
   background:rgba(45, 62, 79, 1);
   font-size: 24px;
